@@ -3,6 +3,9 @@
 	* src/exmpp_stringprep.erl: New frontend for the exmpp_stringprep_drv
 	port driver.
 
+	* src/exmpp_internals.erl: New module which provide low-level
+	functions for port drivers handling.
+
 2007-02-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* c_src/uni_data.c, c_src/uni_norm.c, c_src/stringprep_uni_data.h,
